--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1> Puvansh Barodia</h1><hr>
+    <p>
+        This line is added.
+        Second line is added.
+    </p>
 </body>
 </html>
