Contact.html Modified

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>contat Me</h1>
+    <h1>Contat Me</h1><hr>
     <div class="contact">
         <form action="">
             <input type="date" name="enter the date" id="date" placeholder="Enter the date">
