New file style.css

--- a/contact.html
+++ b/contact.html
@@ -5,29 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <style>
-        body{
-            background-color: yellow;
-        }
-        h1{
-            color: red;
-            text-align: center;
-        }
-        .contact{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
+    <link rel="stylesheet" href="style.css">
 
-    </style>
 </head>
 <body>
     <h1>Contat Me</h1><hr>
     <div class="contact">
         <form action="">
-            <input type="date" name="enter the date" id="date" placeholder="Enter the date">
-            <input type="email" name="Enter email" id="mail" placeholder="Enter your mailid">
+            <input type="date" name="enter the date" id="date" placeholder="Enter the date" width="10%">
+            <input type="email" name="Enter email" id="mail" placeholder="Enter your mailid" width="20%">
             <button class="btn">Submit</button>
             <button class="btn">Reset</button>
             
