new feature modified

--- a/new_feature.html
+++ b/new_feature.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is new feature.</h1>
+    <h1>This is new feature.
+        It is modified file.
+    </h1>
+
 </body>
 </html>
