about.html changed

--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@ are terminated then try again. If it still fails, a git process
 may have crashed in this repository earlier:
 remove the file manually to continue.
     rm -f .git/index.lock
+
+    Now about.html is updated.
 </p>    
 </body>
 </html>
