--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@ remove the file manually to continue.
     rm -f .git/index.lock
 
     Now about.html is updated.
+    It is info about me.
 </p>    
 </body>
 </html>
