--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="./styles/style.css" rel="stylesheet">
     <title>Know Me</title>
   </head>
   <body>
@@ -33,8 +32,24 @@
               </div>
           </div>
         </nav>
+
+        <div class="card" style="width: 40rem; margin: 4% auto;">
+            <img src="./imgs/Capture.JPG" class="card-img-top" style="width:50%; margin: 5px auto;">
+            <div class="card-body">
+              <h1 class="card-title">Purvansh Barodia</h1>
+              <p class="card-text">
+                  <b>Hey there.</b><br>
+                  I am persuing Computer Science and Engineering at Ahmedabad University. I am interested in Machine Learnig and Data Science.
+
+
+              </p>
+              <a href="./Purvansh_Barodia_Resume.pdf" class="btn btn-primary">Download CV</a>
+            </div>
+          </div>
         
 </section>
+
+
 <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
