--- a/project.html
+++ b/project.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="./styles/style_project.css" rel="stylesheet">
     <title>My Projects</title>
   </head>
   <body>
@@ -35,6 +36,28 @@
             </div>
           </div>
         </nav>
+
+        <div class="row">
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                    <img src="./imgs/Library_Management_System.JPG" style="width: 50%; margin-left: auto; margin-right: auto; display: block;">
+                  <h2 class="card-title" style="text-align: center;">Library Management System</h2>
+                  <p class="card-text" style="text-align: center;">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Github link</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
   
   
   
