--- a/project.html
+++ b/project.html
@@ -37,27 +37,38 @@
           </div>
         </nav>
 
+        <div class="container p-5">
+
+            <h1 class="alert alert-info text-center">
+                My Projects
+            </h1>
+
         <div class="row">
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
-                    <img src="./imgs/Library_Management_System.JPG" style="width: 50%; margin-left: auto; margin-right: auto; display: block;">
-                  <h2 class="card-title" style="text-align: center;">Library Management System</h2>
-                  <p class="card-text" style="text-align: center;">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Github link</a>
+                    <img src="./imgs/Medical_Store_Management_System.JPG" style="width: 50%; margin-left: auto; margin-right: auto; display: block;">
+                  <h2 class="card-title" >Medical Store Management</h2>
+                  <p class="card-text" >It help in medicine stock inventory to medical stores.</p>
+                  <a href="https://github.com/PurvanshBarodia/Medical_Store_Management_System" class="btn btn-primary">Github link</a>
                 </div>
               </div>
             </div>
+            
             <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="card">
+                  <div class="card-body">
+                      <img src="./imgs/Google_Play_Store-EDA.JPG" style="width: 47.15%; margin-left: auto; margin-right: auto; display: block;">
+                    <h2 class="card-title" >Google Play Store-EDA</h2>
+                    <p class="card-text" >Exploratory Data Analysis performe on google play store data to get useful insights.</p>
+                    <a href="https://github.com/PurvanshBarodia/Google_Play_Store-EDA" class="btn btn-primary">Github link</a>
+                  </div>
                 </div>
               </div>
-            </div>
+            
           </div>
+
+        </div>
   
   
   
