--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
 
               </p>
-              <a href="./Purvansh_Barodia_Resume.pdf" class="btn btn-primary">Download CV</a>
+              <a href="./Purvansh_Barodia_Resume.pdf" target="_blank" class="btn btn-primary">Download CV</a>
             </div>
           </div>
         
