--- a/contact.html
+++ b/contact.html
@@ -64,24 +64,24 @@
             <div class="row">
               <div class="col-6">
               <i class="bi bi-facebook" style="font-size: 40px;"></i>
-              <a href="#">https:/www.facebook.com</a>
+              <a href="#" target="_blank">https:/www.facebook.com</a>
               </div>
         
 
             
               <div class="col-6">
               <i class="bi bi-whatsapp" style="font-size: 40px;"></i>
-              <a href="#">+91 987654321 </a>
+              <a href="#" target="_blank">+91 987654321 </a>
               </div>
 
               <div class="col-6">
               <i class="bi bi-linkedin" style="font-size: 40px;"></i>
-              <a href="#">https://in.linkedin.com/in/purvansh-barodia</a>
+              <a href="https://in.linkedin.com/in/purvansh-barodia" target="_blank">https://in.linkedin.com</a>
               </div>
 
               <div class="col-6">
               <i class="bi bi-instagram" style="font-size: 40px;"></i>
-              <a href="#">https:/www.facebook.com</a>
+              <a href="#" target="_blank">https:/www.facebook.com</a>
               </div>
             </div>
           </div>
