--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
                     <img src="./imgs/Medical_Store_Management_System.JPG" style="width: 50%; margin-left: auto; margin-right: auto; display: block;">
                   <h2 class="card-title" >Medical Store Management</h2>
                   <p class="card-text" >It help in medicine stock inventory to medical stores.</p>
-                  <a href="https://github.com/PurvanshBarodia/Medical_Store_Management_System" class="btn btn-primary">Github link</a>
+                  <a href="https://github.com/PurvanshBarodia/Medical_Store_Management_System" target="_blank" class="btn btn-primary">Github link</a>
                 </div>
               </div>
             </div>
@@ -61,7 +61,7 @@
                       <img src="./imgs/Google_Play_Store-EDA.JPG" style="width: 47.15%; margin-left: auto; margin-right: auto; display: block;">
                     <h2 class="card-title" >Google Play Store-EDA</h2>
                     <p class="card-text" >Exploratory Data Analysis performe on google play store data to get useful insights.</p>
-                    <a href="https://github.com/PurvanshBarodia/Google_Play_Store-EDA" class="btn btn-primary">Github link</a>
+                    <a href="https://github.com/PurvanshBarodia/Google_Play_Store-EDA" target="_blank" class="btn btn-primary">Github link</a>
                   </div>
                 </div>
               </div>
